// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientAppInstallConfirmation InstallForGroupHeading should match a snapshot where is not orgAdmin is offGrouping and foundations admin 1`] = `
<p>
  You are about to install ‘
  App Name
  ’ for your Office Group 
</p>
`;

exports[`ClientAppInstallConfirmation InstallForGroupHeading should match a snapshot where is not orgAdmin not offGrouping and foundations admin 1`] = `
<p>
  You are about to install ‘
  App Name
  ’ for your Office Group 
</p>
`;

exports[`ClientAppInstallConfirmation InstallForGroupHeading should match a snapshot where is orgAdmin and offGrouping 1`] = `
<Fragment>
  <p>
    You have the option to install ‘
    App Name
    ’ for either your Office Group or for 
    <b>
      all
    </b>
     Users and Offices within your Organisation.
  </p>
  <div
    className="field field-checkbox mb-4 control"
  >
    <input
      checked={true}
      className="checkbox"
      id="group"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="label"
      htmlFor="group"
    >
      Install for my office group 
    </label>
  </div>
  <div
    className="field field-checkbox mb-4 control"
  >
    <input
      checked={true}
      className="checkbox"
      id="org"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="label"
      htmlFor="org"
    >
      Install for the whole organisation
    </label>
  </div>
</Fragment>
`;

exports[`ClientAppInstallConfirmation should match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "clientAppDetailRoute",
          "pathname": "/apps/:appid",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "clientAppDetailRoute",
              "pathname": "/apps/:appid",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "clientAppDetailRoute",
            "pathname": "/apps/:appid",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <AppInstallConfirmation
        appDetailData={
          Object {
            "description": "enim facilisis",
            "developer": "Pete's Proptech World Ltd",
            "homePage": "http://myawesomeproptechproduct.io",
            "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
            "installationId": "123",
            "isWebComponent": true,
            "media": Array [
              Object {
                "description": "Application Icon",
                "type": "icon",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
              },
            ],
            "name": "Peter's Properties",
            "scopes": Array [
              Object {
                "description": "Read data about developers",
                "name": "Marketplace/developers.read",
              },
              Object {
                "description": "Write data about developers",
                "name": "Marketplace/developers.write",
              },
            ],
            "summary": "vitae elementum curabitur vitae",
            "supportEmail": "support@reapit.com",
            "telephone": "0113 288 2900",
          }
        }
        closeInstallConfirmationModal={[MockFunction]}
        visible={true}
      >
        <Component
          footer={
            <div
              className="flex"
            >
              <Unknown
                className=""
                dataTest="disagree-btn"
                disabled={false}
                onClick={[MockFunction]}
                type="button"
                variant="secondary"
              >
                Cancel
              </Unknown>
              <Unknown
                className=""
                dataTest="agree-btn"
                loading={false}
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                Confirm
              </Unknown>
            </div>
          }
          isCentered={true}
          onClose={[MockFunction]}
          title="Confirm Peter's Properties installation"
          visible={true}
        >
          <Component
            className=""
            closeIcon={
              <span
                aria-label="close"
                className="delete"
              />
            }
            destroyOnClose={true}
            footer={
              <div
                className="flex"
              >
                <Unknown
                  className=""
                  dataTest="disagree-btn"
                  disabled={false}
                  onClick={[MockFunction]}
                  type="button"
                  variant="secondary"
                >
                  Cancel
                </Unknown>
                <Unknown
                  className=""
                  dataTest="agree-btn"
                  loading={false}
                  onClick={[Function]}
                  type="button"
                  variant="primary"
                >
                  Confirm
                </Unknown>
              </div>
            }
            onClose={[MockFunction]}
            title={
              <Unknown>
                Confirm Peter's Properties installation
              </Unknown>
            }
            visible={true}
            wrapClassName=""
          >
            <PortalWrapper
              visible={true}
            >
              <Portal
                getContainer={[Function]}
              >
                <Portal
                  containerInfo={
                    <div>
                      <div
                        class="rc-dialog-root"
                      >
                        <div
                          class="rc-dialog-mask"
                        />
                        <div
                          aria-labelledby="rcDialogTitle2"
                          class="rc-dialog-wrap "
                          role="dialog"
                          tabindex="-1"
                        >
                          <div
                            class="rc-dialog "
                            role="document"
                          >
                            <div
                              aria-hidden="true"
                              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                              tabindex="0"
                            />
                            <div
                              class="rc-dialog-content"
                            >
                              <button
                                aria-label="Close"
                                class="rc-dialog-close"
                                type="button"
                              >
                                <span
                                  aria-label="close"
                                  class="delete"
                                />
                              </button>
                              <div
                                class="rc-dialog-header"
                              >
                                <div
                                  class="rc-dialog-title"
                                  id="rcDialogTitle2"
                                >
                                  <h4
                                    class="modal-card-title is-4 pt-2 pb-2"
                                  >
                                    Confirm Peter's Properties installation
                                  </h4>
                                </div>
                              </div>
                              <div
                                class="rc-dialog-body"
                              >
                                <div
                                  class=""
                                  data-test=""
                                >
                                  <p>
                                    You are about to install ‘
                                    Peter's Properties
                                    ’ for 
                                    <b>
                                      all
                                    </b>
                                     Users and Offices within your Organisation.
                                  </p>
                                  <h5
                                    class=""
                                    id=""
                                  >
                                    Pricing Information
                                  </h5>
                                  <p>
                                    There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
                                    Pete's Proptech World Ltd
                                    . Please contact 
                                    Pete's Proptech World Ltd
                                     directly for information about pricing.
                                  </p>
                                  <h5
                                    class=""
                                    id=""
                                  >
                                    Data Permissions
                                  </h5>
                                  <p>
                                    By installing this app, you are granting the following permissions to your data:
                                  </p>
                                  <p>
                                    Information about your organisation and the names/email addresses of your users
                                  </p>
                                  <div
                                    class=""
                                    data-test=""
                                  >
                                    <div
                                      class=""
                                      data-test=""
                                    >
                                      Read data about developers
                                    </div>
                                    <div
                                      class=""
                                      data-test=""
                                    >
                                      Write data about developers
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="rc-dialog-footer"
                              >
                                <div
                                  class="flex"
                                >
                                  <button
                                    class="button  is-secondary  "
                                    data-test="disagree-btn"
                                    type="button"
                                  >
                                    Cancel
                                  </button>
                                  <button
                                    class="button  is-primary  "
                                    data-test="agree-btn"
                                    type="button"
                                  >
                                    Confirm
                                  </button>
                                </div>
                              </div>
                            </div>
                            <div
                              aria-hidden="true"
                              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                              tabindex="0"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <Dialog
                    className=""
                    closable={true}
                    closeIcon={
                      <span
                        aria-label="close"
                        className="delete"
                      />
                    }
                    destroyOnClose={true}
                    focusTriggerAfterClose={true}
                    footer={
                      <div
                        className="flex"
                      >
                        <Unknown
                          className=""
                          dataTest="disagree-btn"
                          disabled={false}
                          onClick={[MockFunction]}
                          type="button"
                          variant="secondary"
                        >
                          Cancel
                        </Unknown>
                        <Unknown
                          className=""
                          dataTest="agree-btn"
                          loading={false}
                          onClick={[Function]}
                          type="button"
                          variant="primary"
                        >
                          Confirm
                        </Unknown>
                      </div>
                    }
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    keyboard={true}
                    mask={true}
                    maskClosable={true}
                    onClose={[MockFunction]}
                    prefixCls="rc-dialog"
                    switchScrollingEffect={[Function]}
                    title={
                      <Unknown>
                        Confirm Peter's Properties installation
                      </Unknown>
                    }
                    visible={true}
                    wrapClassName=""
                  >
                    <div
                      className="rc-dialog-root"
                    >
                      <LazyRenderBox
                        className="rc-dialog-mask"
                        hiddenClassName="rc-dialog-mask-hidden"
                        key="mask"
                        style={Object {}}
                        visible={true}
                      >
                        <div
                          className="rc-dialog-mask"
                          style={Object {}}
                        />
                      </LazyRenderBox>
                      <div
                        aria-labelledby="rcDialogTitle2"
                        className="rc-dialog-wrap "
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        onMouseUp={[Function]}
                        role="dialog"
                        style={
                          Object {
                            "display": null,
                          }
                        }
                        tabIndex={-1}
                      >
                        <Animate
                          animation={Object {}}
                          component=""
                          componentProps={Object {}}
                          key="dialog"
                          onAppear={[Function]}
                          onEnd={[Function]}
                          onEnter={[Function]}
                          onLeave={[Function]}
                          showProp="visible"
                          transitionAppear={true}
                          transitionEnter={true}
                          transitionLeave={true}
                        >
                          <AnimateChild
                            animation={Object {}}
                            key="dialog-element"
                            transitionAppear={true}
                            transitionEnter={true}
                            transitionLeave={true}
                          >
                            <LazyRenderBox
                              className="rc-dialog "
                              key="dialog-element"
                              onMouseDown={[Function]}
                              role="document"
                              style={Object {}}
                              visible={true}
                            >
                              <div
                                className="rc-dialog "
                                onMouseDown={[Function]}
                                role="document"
                                style={Object {}}
                              >
                                <div
                                  aria-hidden="true"
                                  style={
                                    Object {
                                      "height": 0,
                                      "outline": "none",
                                      "overflow": "hidden",
                                      "width": 0,
                                    }
                                  }
                                  tabIndex={0}
                                />
                                <div
                                  className="rc-dialog-content"
                                >
                                  <button
                                    aria-label="Close"
                                    className="rc-dialog-close"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <span
                                      aria-label="close"
                                      className="delete"
                                    />
                                  </button>
                                  <div
                                    className="rc-dialog-header"
                                  >
                                    <div
                                      className="rc-dialog-title"
                                      id="rcDialogTitle2"
                                    >
                                      <Component>
                                        <h4
                                          className="modal-card-title is-4 pt-2 pb-2"
                                        >
                                          Confirm Peter's Properties installation
                                        </h4>
                                      </Component>
                                    </div>
                                  </div>
                                  <div
                                    className="rc-dialog-body"
                                  >
                                    <Component>
                                      <div
                                        className=""
                                        data-test=""
                                      >
                                        <Component
                                          clientId="SBOX"
                                          clientIdToInstall="SBOX"
                                          isFoundationsAdmin={false}
                                          isOffGrouping={false}
                                          isOrgAdmin={false}
                                          name="Peter's Properties"
                                          offGroupName=""
                                          setClientIdToInstall={[Function]}
                                        >
                                          <p>
                                            You are about to install ‘
                                            Peter's Properties
                                            ’ for 
                                            <b>
                                              all
                                            </b>
                                             Users and Offices within your Organisation.
                                          </p>
                                        </Component>
                                        <Component
                                          className="mb-2"
                                        >
                                          <h5
                                            className=""
                                            id=""
                                          >
                                            Pricing Information
                                          </h5>
                                        </Component>
                                        <p>
                                          There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
                                          Pete's Proptech World Ltd
                                          . Please contact 
                                          Pete's Proptech World Ltd
                                           directly for information about pricing.
                                        </p>
                                        <Component
                                          className="mb-2"
                                        >
                                          <h5
                                            className=""
                                            id=""
                                          >
                                            Data Permissions
                                          </h5>
                                        </Component>
                                        <p>
                                          By installing this app, you are granting the following permissions to your data:
                                        </p>
                                        <p>
                                          Information about your organisation and the names/email addresses of your users
                                        </p>
                                        <Component>
                                          <div
                                            className=""
                                            data-test=""
                                          >
                                            <Component
                                              key="Marketplace/developers.read"
                                            >
                                              <div
                                                className=""
                                                data-test=""
                                              >
                                                Read data about developers
                                              </div>
                                            </Component>
                                            <Component
                                              key="Marketplace/developers.write"
                                            >
                                              <div
                                                className=""
                                                data-test=""
                                              >
                                                Write data about developers
                                              </div>
                                            </Component>
                                          </div>
                                        </Component>
                                      </div>
                                    </Component>
                                  </div>
                                  <div
                                    className="rc-dialog-footer"
                                  >
                                    <div
                                      className="flex"
                                    >
                                      <Component
                                        className=""
                                        dataTest="disagree-btn"
                                        disabled={false}
                                        onClick={[MockFunction]}
                                        type="button"
                                        variant="secondary"
                                      >
                                        <button
                                          className="button  is-secondary  "
                                          data-test="disagree-btn"
                                          disabled={false}
                                          onClick={[MockFunction]}
                                          type="button"
                                        >
                                          Cancel
                                        </button>
                                      </Component>
                                      <Component
                                        className=""
                                        dataTest="agree-btn"
                                        loading={false}
                                        onClick={[Function]}
                                        type="button"
                                        variant="primary"
                                      >
                                        <button
                                          className="button  is-primary  "
                                          data-test="agree-btn"
                                          disabled={false}
                                          onClick={[Function]}
                                          type="button"
                                        >
                                          Confirm
                                        </button>
                                      </Component>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  aria-hidden="true"
                                  style={
                                    Object {
                                      "height": 0,
                                      "outline": "none",
                                      "overflow": "hidden",
                                      "width": 0,
                                    }
                                  }
                                  tabIndex={0}
                                />
                              </div>
                            </LazyRenderBox>
                          </AnimateChild>
                        </Animate>
                      </div>
                    </div>
                  </Dialog>
                </Portal>
              </Portal>
            </PortalWrapper>
          </Component>
        </Component>
        <Component
          afterClose={[Function]}
          appDetailData={
            Object {
              "description": "enim facilisis",
              "developer": "Pete's Proptech World Ltd",
              "homePage": "http://myawesomeproptechproduct.io",
              "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
              "installationId": "123",
              "isWebComponent": true,
              "media": Array [
                Object {
                  "description": "Application Icon",
                  "type": "icon",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
                },
              ],
              "name": "Peter's Properties",
              "scopes": Array [
                Object {
                  "description": "Read data about developers",
                  "name": "Marketplace/developers.read",
                },
                Object {
                  "description": "Write data about developers",
                  "name": "Marketplace/developers.write",
                },
              ],
              "summary": "vitae elementum curabitur vitae",
              "supportEmail": "support@reapit.com",
              "telephone": "0113 288 2900",
            }
          }
          isDesktopMode={false}
          onSuccessAlertButtonClick={[Function]}
          visible={false}
        >
          <Component
            hasHeader={false}
            isCentered={true}
            isPadding={false}
            onClose={[Function]}
            visible={false}
          >
            <Component
              className=""
              closeIcon={
                <span
                  aria-label="close"
                  className="delete"
                />
              }
              destroyOnClose={true}
              onClose={[Function]}
              title={<Unknown />}
              visible={false}
              wrapClassName=""
            >
              <PortalWrapper
                visible={false}
              />
            </Component>
          </Component>
        </Component>
        <Component
          afterClose={[Function]}
          appDetailData={
            Object {
              "description": "enim facilisis",
              "developer": "Pete's Proptech World Ltd",
              "homePage": "http://myawesomeproptechproduct.io",
              "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
              "installationId": "123",
              "isWebComponent": true,
              "media": Array [
                Object {
                  "description": "Application Icon",
                  "type": "icon",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
                },
              ],
              "name": "Peter's Properties",
              "scopes": Array [
                Object {
                  "description": "Read data about developers",
                  "name": "Marketplace/developers.read",
                },
                Object {
                  "description": "Write data about developers",
                  "name": "Marketplace/developers.write",
                },
              ],
              "summary": "vitae elementum curabitur vitae",
              "supportEmail": "support@reapit.com",
              "telephone": "0113 288 2900",
            }
          }
          isDesktopMode={false}
          onSuccessAlertButtonClick={[Function]}
          visible={false}
        >
          <Component
            hasHeader={false}
            isCentered={true}
            isPadding={false}
            onClose={[Function]}
            visible={false}
          >
            <Component
              className=""
              closeIcon={
                <span
                  aria-label="close"
                  className="delete"
                />
              }
              destroyOnClose={true}
              onClose={[Function]}
              title={<Unknown />}
              visible={false}
              wrapClassName=""
            >
              <PortalWrapper
                visible={false}
              />
            </Component>
          </Component>
        </Component>
      </AppInstallConfirmation>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`InstallDirectApiAppSucesfullyModal  should match a snapshot 1`] = `
<Component
  afterClose={[MockFunction]}
  appDetailData={
    Object {
      "description": "enim facilisis",
      "developer": "Pete's Proptech World Ltd",
      "homePage": "http://myawesomeproptechproduct.io",
      "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
      "installationId": "123",
      "isWebComponent": true,
      "media": Array [
        Object {
          "description": "Application Icon",
          "type": "icon",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
        },
      ],
      "name": "Peter's Properties",
      "scopes": Array [
        Object {
          "description": "Read data about developers",
          "name": "Marketplace/developers.read",
        },
        Object {
          "description": "Write data about developers",
          "name": "Marketplace/developers.write",
        },
      ],
      "summary": "vitae elementum curabitur vitae",
      "supportEmail": "support@reapit.com",
      "telephone": "0113 288 2900",
    }
  }
  isDesktopMode={true}
  onSuccessAlertButtonClick={[MockFunction]}
  visible={true}
>
  <Component
    hasHeader={false}
    isCentered={true}
    isPadding={false}
    onClose={[MockFunction]}
    visible={true}
  >
    <Component
      className=""
      closeIcon={
        <span
          aria-label="close"
          className="delete"
        />
      }
      destroyOnClose={true}
      onClose={[MockFunction]}
      title={<Unknown />}
      visible={true}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="rc-dialog-root"
                >
                  <div
                    class="rc-dialog-mask"
                  />
                  <div
                    aria-labelledby="rcDialogTitle1"
                    class="rc-dialog-wrap "
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="rc-dialog "
                      role="document"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="rc-dialog-content"
                      >
                        <button
                          aria-label="Close"
                          class="rc-dialog-close"
                          type="button"
                        >
                          <span
                            aria-label="close"
                            class="delete"
                          />
                        </button>
                        <div
                          class="rc-dialog-header"
                        >
                          <div
                            class="rc-dialog-title"
                            id="rcDialogTitle1"
                          >
                            <h4
                              class="modal-card-title is-4 pt-2 pb-2"
                            />
                          </div>
                        </div>
                        <div
                          class="rc-dialog-body"
                        >
                          <div
                            class=""
                            data-test="installations-success-message"
                          >
                            <div
                              class="notification is-success mb-0"
                              data-test=""
                              role="alert"
                            >
                              Success
                            </div>
                            <div
                              class=""
                            >
                              <p>
                                <p
                                  class="mb-5"
                                >
                                  Peter's Properties
                                   has been successfully installed.
                                </p>
                                <p
                                  class="mb-5 flex v-align-middle"
                                >
                                  To launch, please use
                                   
                                  <a
                                    class=""
                                    href="agencycloud://process/webpage?url=undefined"
                                  />
                                </p>
                                <p>
                                  If there are any additional setup requirements, a member of 
                                  Pete's Proptech World Ltd
                                   will be in touch to help you through the process.
                                </p>
                              </p>
                              <div
                                class="has-text-right"
                              >
                                <button
                                  class="button  is-primary  "
                                  data-test="installations-success-button"
                                  type="button"
                                >
                                  Back to List
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              className=""
              closable={true}
              closeIcon={
                <span
                  aria-label="close"
                  className="delete"
                />
              }
              destroyOnClose={true}
              focusTriggerAfterClose={true}
              getContainer={[Function]}
              getOpenCount={[Function]}
              keyboard={true}
              mask={true}
              maskClosable={true}
              onClose={[MockFunction]}
              prefixCls="rc-dialog"
              switchScrollingEffect={[Function]}
              title={<Unknown />}
              visible={true}
              wrapClassName=""
            >
              <div
                className="rc-dialog-root"
              >
                <LazyRenderBox
                  className="rc-dialog-mask"
                  hiddenClassName="rc-dialog-mask-hidden"
                  key="mask"
                  style={Object {}}
                  visible={true}
                >
                  <div
                    className="rc-dialog-mask"
                    style={Object {}}
                  />
                </LazyRenderBox>
                <div
                  aria-labelledby="rcDialogTitle1"
                  className="rc-dialog-wrap "
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                    }
                  }
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                  >
                    <AnimateChild
                      animation={Object {}}
                      key="dialog-element"
                      transitionAppear={true}
                      transitionEnter={true}
                      transitionLeave={true}
                    >
                      <LazyRenderBox
                        className="rc-dialog "
                        key="dialog-element"
                        onMouseDown={[Function]}
                        role="document"
                        style={Object {}}
                        visible={true}
                      >
                        <div
                          className="rc-dialog "
                          onMouseDown={[Function]}
                          role="document"
                          style={Object {}}
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <div
                            className="rc-dialog-content"
                          >
                            <button
                              aria-label="Close"
                              className="rc-dialog-close"
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                aria-label="close"
                                className="delete"
                              />
                            </button>
                            <div
                              className="rc-dialog-header"
                            >
                              <div
                                className="rc-dialog-title"
                                id="rcDialogTitle1"
                              >
                                <Component>
                                  <h4
                                    className="modal-card-title is-4 pt-2 pb-2"
                                  />
                                </Component>
                              </div>
                            </div>
                            <div
                              className="rc-dialog-body"
                            >
                              <CallToAction
                                buttonDataTest="installations-success-button"
                                buttonText="Back to List"
                                dataTest="installations-success-message"
                                isCenter={true}
                                onButtonClick={[MockFunction]}
                                title="Success"
                              >
                                <div
                                  className=""
                                  data-test="installations-success-message"
                                >
                                  <Component
                                    className="mb-0"
                                    message="Success"
                                    type="success"
                                  >
                                    <div
                                      className="notification is-success mb-0"
                                      data-test=""
                                      role="alert"
                                    >
                                      Success
                                    </div>
                                  </Component>
                                  <Component
                                    flexColumn={true}
                                    hasBackground={true}
                                    hasPadding={true}
                                  >
                                    <div
                                      className=""
                                    >
                                      <p>
                                        <p
                                          className="mb-5"
                                        >
                                          Peter's Properties
                                           has been successfully installed.
                                        </p>
                                        <p
                                          className="mb-5 flex v-align-middle"
                                        >
                                          To launch, please use
                                           
                                          <a
                                            className=""
                                            href="agencycloud://process/webpage?url=undefined"
                                          />
                                        </p>
                                        <p>
                                          If there are any additional setup requirements, a member of 
                                          Pete's Proptech World Ltd
                                           will be in touch to help you through the process.
                                        </p>
                                      </p>
                                      <div
                                        className="has-text-right"
                                      >
                                        <Component
                                          dataTest="installations-success-button"
                                          onClick={[MockFunction]}
                                          type="button"
                                          variant="primary"
                                        >
                                          <button
                                            className="button  is-primary  "
                                            data-test="installations-success-button"
                                            disabled={false}
                                            onClick={[MockFunction]}
                                            type="button"
                                          >
                                            Back to List
                                          </button>
                                        </Component>
                                      </div>
                                    </div>
                                  </Component>
                                </div>
                              </CallToAction>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </LazyRenderBox>
                    </AnimateChild>
                  </Animate>
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </PortalWrapper>
    </Component>
  </Component>
</Component>
`;

exports[`InstallNonDirectApiAppSucesfullyModal  should match a snapshot 1`] = `
<Component
  afterClose={[MockFunction]}
  appDetailData={
    Object {
      "description": "enim facilisis",
      "developer": "Pete's Proptech World Ltd",
      "homePage": "http://myawesomeproptechproduct.io",
      "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
      "installationId": "123",
      "isWebComponent": true,
      "media": Array [
        Object {
          "description": "Application Icon",
          "type": "icon",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
        },
      ],
      "name": "Peter's Properties",
      "scopes": Array [
        Object {
          "description": "Read data about developers",
          "name": "Marketplace/developers.read",
        },
        Object {
          "description": "Write data about developers",
          "name": "Marketplace/developers.write",
        },
      ],
      "summary": "vitae elementum curabitur vitae",
      "supportEmail": "support@reapit.com",
      "telephone": "0113 288 2900",
    }
  }
  isDesktopMode={true}
  onSuccessAlertButtonClick={[MockFunction]}
  visible={true}
>
  <Component
    hasHeader={false}
    isCentered={true}
    isPadding={false}
    onClose={[MockFunction]}
    visible={true}
  >
    <Component
      className=""
      closeIcon={
        <span
          aria-label="close"
          className="delete"
        />
      }
      destroyOnClose={true}
      onClose={[MockFunction]}
      title={<Unknown />}
      visible={true}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="rc-dialog-root"
                >
                  <div
                    class="rc-dialog-mask"
                  />
                  <div
                    aria-labelledby="rcDialogTitle0"
                    class="rc-dialog-wrap "
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="rc-dialog "
                      role="document"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="rc-dialog-content"
                      >
                        <button
                          aria-label="Close"
                          class="rc-dialog-close"
                          type="button"
                        >
                          <span
                            aria-label="close"
                            class="delete"
                          />
                        </button>
                        <div
                          class="rc-dialog-header"
                        >
                          <div
                            class="rc-dialog-title"
                            id="rcDialogTitle0"
                          >
                            <h4
                              class="modal-card-title is-4 pt-2 pb-2"
                            />
                          </div>
                        </div>
                        <div
                          class="rc-dialog-body"
                        >
                          <div
                            class=""
                            data-test=""
                          >
                            <div
                              class="notification is-success mb-0"
                              data-test=""
                              role="alert"
                            >
                              Success
                            </div>
                            <div
                              class=""
                            >
                              <p>
                                Peter's Properties
                                 has been successfully installed
                              </p>
                              <div
                                class="has-text-right"
                              >
                                <div
                                  class=""
                                >
                                  <button
                                    class="button  is-primary  "
                                    data-test="installations-success-message"
                                    type="button"
                                  >
                                    Back To List
                                  </button>
                                  <a
                                    href="agencycloud://process/webpage?url=undefined"
                                  >
                                    <button
                                      class="button  is-primary  "
                                      data-test="installations-success-message-launch"
                                      type="button"
                                    >
                                      Launch App
                                    </button>
                                  </a>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              className=""
              closable={true}
              closeIcon={
                <span
                  aria-label="close"
                  className="delete"
                />
              }
              destroyOnClose={true}
              focusTriggerAfterClose={true}
              getContainer={[Function]}
              getOpenCount={[Function]}
              keyboard={true}
              mask={true}
              maskClosable={true}
              onClose={[MockFunction]}
              prefixCls="rc-dialog"
              switchScrollingEffect={[Function]}
              title={<Unknown />}
              visible={true}
              wrapClassName=""
            >
              <div
                className="rc-dialog-root"
              >
                <LazyRenderBox
                  className="rc-dialog-mask"
                  hiddenClassName="rc-dialog-mask-hidden"
                  key="mask"
                  style={Object {}}
                  visible={true}
                >
                  <div
                    className="rc-dialog-mask"
                    style={Object {}}
                  />
                </LazyRenderBox>
                <div
                  aria-labelledby="rcDialogTitle0"
                  className="rc-dialog-wrap "
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                    }
                  }
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                  >
                    <AnimateChild
                      animation={Object {}}
                      key="dialog-element"
                      transitionAppear={true}
                      transitionEnter={true}
                      transitionLeave={true}
                    >
                      <LazyRenderBox
                        className="rc-dialog "
                        key="dialog-element"
                        onMouseDown={[Function]}
                        role="document"
                        style={Object {}}
                        visible={true}
                      >
                        <div
                          className="rc-dialog "
                          onMouseDown={[Function]}
                          role="document"
                          style={Object {}}
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <div
                            className="rc-dialog-content"
                          >
                            <button
                              aria-label="Close"
                              className="rc-dialog-close"
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                aria-label="close"
                                className="delete"
                              />
                            </button>
                            <div
                              className="rc-dialog-header"
                            >
                              <div
                                className="rc-dialog-title"
                                id="rcDialogTitle0"
                              >
                                <Component>
                                  <h4
                                    className="modal-card-title is-4 pt-2 pb-2"
                                  />
                                </Component>
                              </div>
                            </div>
                            <div
                              className="rc-dialog-body"
                            >
                              <CallToAction
                                buttonDataTest="installations-success-button-back"
                                footerItems={
                                  <div
                                    className=""
                                  >
                                    <Unknown
                                      dataTest="installations-success-message"
                                      onClick={[MockFunction]}
                                      type="button"
                                      variant="primary"
                                    >
                                      Back To List
                                    </Unknown>
                                    <a
                                      href="agencycloud://process/webpage?url=undefined"
                                    >
                                      <Unknown
                                        dataTest="installations-success-message-launch"
                                        type="button"
                                        variant="primary"
                                      >
                                        Launch App
                                      </Unknown>
                                    </a>
                                  </div>
                                }
                                isCenter={true}
                                onButtonClick={[MockFunction]}
                                title="Success"
                              >
                                <div
                                  className=""
                                  data-test=""
                                >
                                  <Component
                                    className="mb-0"
                                    message="Success"
                                    type="success"
                                  >
                                    <div
                                      className="notification is-success mb-0"
                                      data-test=""
                                      role="alert"
                                    >
                                      Success
                                    </div>
                                  </Component>
                                  <Component
                                    flexColumn={true}
                                    hasBackground={true}
                                    hasPadding={true}
                                  >
                                    <div
                                      className=""
                                    >
                                      <p>
                                        Peter's Properties
                                         has been successfully installed
                                      </p>
                                      <div
                                        className="has-text-right"
                                      >
                                        <div
                                          className=""
                                        >
                                          <Component
                                            dataTest="installations-success-message"
                                            onClick={[MockFunction]}
                                            type="button"
                                            variant="primary"
                                          >
                                            <button
                                              className="button  is-primary  "
                                              data-test="installations-success-message"
                                              disabled={false}
                                              onClick={[MockFunction]}
                                              type="button"
                                            >
                                              Back To List
                                            </button>
                                          </Component>
                                          <a
                                            href="agencycloud://process/webpage?url=undefined"
                                          >
                                            <Component
                                              dataTest="installations-success-message-launch"
                                              type="button"
                                              variant="primary"
                                            >
                                              <button
                                                className="button  is-primary  "
                                                data-test="installations-success-message-launch"
                                                disabled={false}
                                                type="button"
                                              >
                                                Launch App
                                              </button>
                                            </Component>
                                          </a>
                                        </div>
                                      </div>
                                    </div>
                                  </Component>
                                </div>
                              </CallToAction>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </LazyRenderBox>
                    </AnimateChild>
                  </Animate>
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </PortalWrapper>
    </Component>
  </Component>
</Component>
`;
